<?xml version="1.0"?>
<package format="2">
  <name>node_example</name>
  <version>0.0.1</version>
  <description>
    Publishers and subscribers that use the parameter server, dynamic
    reconfigure, timers, and custom messages. Examples for Python and C++ are
    included.
  </description>

  <author>Thomas Denewiler</author>
  <maintainer email="tdenewiler@gmail.com">Thomas Denewiler</maintainer>
  <license>BSD</license>

  <url>https://github.com/tdenewiler/node_example</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>dynamic_reconfigure</depend>

  <depend>rosgraph_msgs</depend>

<!--  <depend>std_msgs</depend>-->

  <test_depend>rostest</test_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>ros_bridge</build_depend>
  <exec_depend>ros_bridge</exec_depend>

  <build_depend>pcl_ros</build_depend>
  <exec_depend>pcl_ros</exec_depend>
  <build_depend>pcl_conversions</build_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>cloud_msgs</build_depend>
  <exec_depend>cloud_msgs</exec_depend>
  <build_depend>sensors_msgs</build_depend>
  <exec_depend>sensors_msgs</exec_depend>

</package>
